--- a/src/frontend/css/reddit_dataset.css
+++ b/src/frontend/css/reddit_dataset.css
@@ -17,6 +17,7 @@
     align-items: center;
     flex-wrap: wrap;
     padding: 12px 0;
+    margin-bottom: 12px;
     border-radius: 8px;
 }
 
@@ -38,13 +39,13 @@
 .label {
     display: flex;
     align-items: center;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     font-weight: 500;
     color: #bbbedb;
 }
 
 .value {
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 800;
 }
 
